<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="logo">Logo</string>
    <string name="backdrop">backdrop</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="movies">Movies</string>
    <string name="settings">Settings</string>
    <string name="vote_with_format">%.1f - %d votes.</string>
    <string name="back">Back</string>
    <string name="poster">Poster</string>

    <string name="cast_n_crews"><![CDATA[Cast & Crews]]></string>

    <string name="movie_name_with_year">%1$s (%2$s)</string>
    <string name="movie_details_info">%1$.1f/10 | %2$s | %3$s</string>
    <string name="director_with_format">Director: %s</string>
    <string name="avatar">Avatar</string>
    <string name="see_all">See all</string>
    <string name="see_less">See less</string>

    <string name="general_error_message">Something went wrong. Please try again later.</string>
    <string name="server_error_message">We had problem with your request. Please try again later.</string>
    <string name="network_error_message">Please check your internet connection and try again.</string>
    <string name="icon">Icon</string>
    <string name="ok">OK</string>
</resources>