<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background"
    >

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/error_icon_size"
        android:layout_height="@dimen/error_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/icon"
        tools:src="@drawable/ic_wifi_error"
        />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/title"
        android:textSize="@dimen/text_size_error_message"
        android:gravity="center_horizontal"
        android:layout_marginStart="@dimen/space_medium"
        android:layout_marginEnd="@dimen/space_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_icon"
        tools:text="@string/network_error_message"
        />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        android:text="@string/ok"
        android:layout_marginTop="@dimen/space_normal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>