<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--Top Bar-->

    <View
        android:id="@+id/v_top_bar_background"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/v_top_bar_background"
        app:layout_constraintTop_toTopOf="@+id/v_top_bar_background"
        app:layout_constraintBottom_toBottomOf="@+id/v_top_bar_background"
        android:src="@drawable/ic_back"
        android:layout_marginStart="@dimen/space_top_bar_padding"
        android:contentDescription="@string/back"
        android:padding="@dimen/space_xsmall"
        />

    <TextView
        android:id="@+id/tv_screen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_screen_title"
        android:textColor="?attr/colorOnPrimary"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintEnd_toStartOf="@+id/iv_settings"
        app:layout_constraintTop_toTopOf="@+id/v_top_bar_background"
        app:layout_constraintBottom_toBottomOf="@+id/v_top_bar_background"
        tools:ignore="SpUsage"
        tools:text="@string/movies"
        />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        app:layout_constraintTop_toTopOf="@+id/v_top_bar_background"
        app:layout_constraintBottom_toBottomOf="@+id/v_top_bar_background"
        app:layout_constraintEnd_toEndOf="@+id/v_top_bar_background"
        android:padding="@dimen/space_xsmall"
        android:layout_marginEnd="@dimen/space_normal"
        android:contentDescription="@string/settings"
        />



    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_top_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>